SERVER-16795 listCollections/listIndexes don't stash recovery unit